--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -37,6 +37,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , split
   default-language: Haskell2010
 
 executable AdventOfCode-exe
@@ -51,6 +52,7 @@ executable AdventOfCode-exe
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , split
   default-language: Haskell2010
 
 test-suite AdventOfCode-test
@@ -66,4 +68,5 @@ test-suite AdventOfCode-test
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , split
   default-language: Haskell2010
